# artifacts

./: .gitignore  LDC2_spritz_analysis_search.py  LDC2_spritz_analysis_shorter_segments.py  README.md  glitch_fitting_mbhb_with_noise.py  pyproject.toml  requirement.txt  revtex_base.mplstyle
code/: LDC2_spritz_analysis_new.py  LDC2_spritz_analysis_shorter_segments.py  __init__.py  glitch_shapelet_analytical_waveform.py  main.py  synthetic_noise_generator.py
code/Light_Spritz/search_algorithm/: LDC2_spritz_analysis_search.py
code/experimental_search_pipelines/: max_matching_glitch_MBHB.py
code/experimental_search_pipelines/noise_gen/: synthetic_noise_generator.py
code/glitch_code/: __init__.py  glitch_shapelet_analytical_waveform.py
code/glitch_fitting_code/: glitch_fitting_freq_domain_RJ.py
code/glitch_search/: LDC2_spritz_analysis_search.py
code/main/: LDC2_spritz_analysis_shorter_segments.py  __init__.py
code/sampling_funcs/: __init__.py
code/utility_funcs/sampling_funcs/: group_stretch_proposal.py
glitch_search/: LDC2_spritz_analysis_search.py
